--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 <!-- Navigation -->
 <nav class="navbar navbar-expand-lg navbar-light fixed-top" id="mainNav">
     <div class="container">
-            <a class="hidden_mobile navbar-brand js-scroll-trigger" href="#page-top">Big Band Pfungstadt</a>
+            <a class="navbar-brand js-scroll-trigger" href="#page-top">Big Band Pfungstadt</a>
         <button class="navbar-toggler navbar-toggler-right"
                 type="button" data-toggle="collapse" data-target="#navbarResponsive"
                 aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
@@ -76,8 +76,7 @@
 <!-- Info Section -->
 <section id="info" class="content-section">
     <div class="container">
-        <h2 class="hidden_mobile center">Infos</h2>
-        <h2 class="center" id="hidden_desktop">Big Band Pfungstadt</h2>
+        <h2 class="center">Infos</h2>
         <!-- smaller container for orchester part, change background color -->
         <div class="container background-medium roundedCorners">
 
