--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 <!-- Navigation -->
 <nav class="navbar navbar-expand-lg navbar-light fixed-top" id="mainNav">
     <div class="container">
-            <a class="navbar-brand js-scroll-trigger" href="#page-top">Big Band Pfungstadt</a>
+        <a class="navbar-brand js-scroll-trigger" href="#page-top">Big Band Pfungstadt</a>
         <button class="navbar-toggler navbar-toggler-right"
                 type="button" data-toggle="collapse" data-target="#navbarResponsive"
                 aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
@@ -52,6 +52,9 @@
                 </li>
                 <li class="nav-item">
                     <a class="nav-link js-scroll-trigger" href="#musiker">Musiker</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link js-scroll-trigger" href="#auftritte">Auftritte</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link js-scroll-trigger" href="#repertoire">Repertoire</a>
@@ -269,7 +272,7 @@
                     <li> Klaus Sterzik Posaune</li>
                     <li> Katja Völger Posaune</li>
                     <li> Wilhelm Crössmann Posaune</li>
-                    <li> Jürgen ? Posaune</li>
+                    <li> Jürgen Grellmann Posaune</li>
                     <li> Dr. Stephan Bott Trompete</li>
                     <li> Werner Bopp Trompete</li>
                     <li> Willi Weinberger Trompete</li>
@@ -288,23 +291,154 @@
     </div>
 </section>
 
+
+
+<!-- Auftritte Section -->
+<section id="auftritte" class="background-medium termine-section content-section text-center">
+    <div class="container">
+        <div class="col-md-8 termine mx-auto roundedCorners">
+            <!-- <h2>Repertoire</h2> -->
+
+            <h2>Auftritte 2023</h2>
+            <div class="col-md-10 mx-auto">
+                <ul class="small">
+
+
+                    <p class="blocksatz"> 10.08.2023 11:00 Ortskernfest Roßdorf
+                        <br>
+                        25.08.2023 19:00 Asklepius Klinik Alsbach
+                        <br>
+                        22.09.2023 18:45 Asklepius Klinik Alsbach
+                        <br>
+                        13.10.2023 18:45 Asklepius Klinik Alsbach</p>
+                    <br>
+                </ul>
+            </div>
+        </div>
+
+    </div>
+</section>
+
+
 <!-- Repertoire Section -->
-<section id="repertoire" class="partitur-background termine-section content-section text-center">
+<section id="repertoire" class=" termine-section content-section text-center">
     <div class="container">
         <div class="col-md-8 termine mx-auto roundedCorners">
             <!-- <h2>Repertoire</h2> -->
 
             <h2>Repertoire</h2>
-            <p>muss das suchbar sein, kann es einfach nur eine liste sein? ist es wichtig? wir haben einige stuecke im
-                repertoire, die ich seit 4 jahren noch nicht gespielt habe, wie wichtig ist es? oder nur eine auswahl
-                angeben? muss hier auch composer und arranger stehen?</p>
-            <!-- desktop version -->
             <div class="col-md-10 mx-auto">
-                <ul class="small">
-                    <li>A Night in Tunesia</li>
-                    <li>A String of Pearls</li>
-                    <li> etc.</li>
+                <ul class="small noDeco">
+
+                    <li class="noDeco"><span class="bold"> Title, </span><span class="italic"> Composer, </span>arranged
+                        by
+                    </li>
+
+                    <li><span class="bold"> A Night in Tunesia</span>, <span class="italic"> Dizzy Gillespie Frank Pararell,</span>
+                        Ralph Ford
+                    </li>
+                    <li><span class="bold">A String of Pearls</span>, <span class="italic"> Jerry Gray Johnny,</span>
+                        Warrington
+                    </li>
+                    <li><span class="bold">Ain't Misbehavin</span>, <span
+                            class="italic"> Fats Waller, Harry Brooks,</span> Ralph Ford
+                    </li>
+                    <li><span class="bold">Ain't she sweet?</span>, <span class="italic">Milton Ager,</span> Harro
+                        Steffen
+                    </li>
+                    <li><span class="bold">Alexander's Ragtime Band</span>, <span class="italic">Irving Berlin,</span>
+                        David Wolpe
+                    </li>
+                    <li><span class="bold">All about the blues</span>, <span class="italic">Carl Strommen</span></li>
+                    <li><span class="bold">American Patrol</span>, <span class="italic">Frank W. Meacham, </span>Paul
+                        Lavender
+                    </li>
+                    <li><span class="bold">Arubian Island</span>, <span class="italic">Mike Carubia</span></li>
                 </ul>
+
+                <!--                <ul class="small">-->
+
+
+                <!--                    <li> A Night in Tunesia, Dizzy Gillespie, Frank Pararell Ralph Ford</li>-->
+                <!--                    <li> A String of Pearls, Jerry Gray Johnny, Warrington</li>-->
+                <!--                    <li> Ain't Misbehavin Fats Waller, Harry Brooks Ralph Ford</li>-->
+                <!--                    <li> Ain't she sweet? Milton Ager Harro Steffen</li>-->
+                <!--                    <li> Alexander's Ragtime Band Irving Berlin David Wolpe</li>-->
+                <!--                    <li> All about the blues Carl Strommen</li>-->
+                <!--                    <li> American Patrol Frank W. Meacham Paul Lavender</li>-->
+                <!--                    <li> Arubian Island Mike Carubia</li>-->
+
+                <!--                    <li> Begin the beguine Cole Porter Jerry Gray</li>-->
+                <!--                    <li> Big Spender Cy Coleman Rick Stitzel</li>-->
+                <!--                    <li> Birdland Joe Zawinul Victor Lopez</li>-->
+
+                <!--                    <li> C Jam Blues Duke Ellington</li>-->
+                <!--                    <li> Creole Love Call Duke Ellington Walter Doschinski</li>-->
+                <!--                    <li> Chattanooga Choo Choo Harry Warren, Mack Gordon Helmut Gardens</li>-->
+                <!--                    <li> Cute Neal Hefti Mike Story</li>-->
+                <!--                    <li> Dancing in the dark</li>-->
+                <!--                    <li> Don't get around much anymore Duke Ellington Bob Russell</li>-->
+                <!--                    <li> Dream Johnny Mercer Frank Comstock</li>-->
+
+                <!--                    <li> Fat Man Boogie Billy May, Peter Herbolzheimer</li>-->
+                <!--                    <li> Fever John Davenport Rodger Holmes</li>-->
+
+                <!--                    <li> Get me to the church in time Frederick Lowe Ralph Ford</li>-->
+                <!--                    <li> Groovin' High Dizzy Gillespie Gregory Yasinitsky</li>-->
+
+                <!--                    <li> Hay Burner Sammy Nestico Sammy Nestico</li>-->
+                <!--                    <li> Harlem Nocturne Earl Hagen Siegfried Ulbrich</li>-->
+
+                <!--                    <li> In the Mood Joe Garland Paul Lavender</li>-->
+
+                <!--                    <li> James Bond Theme Monty Norman Tom Davis</li>-->
+                <!--                    <li> Jumpin at the Woodside Count Basie Sammy Nestico</li>-->
+
+                <!--                    <li> Kitty Willy Berking Paul Biste</li>-->
+
+                <!--                    <li> Little Brown Jug Joseph Winner Paul Lavender</li>-->
+                <!--                    <li> Liza George Gershwin Walter Dobschinski</li>-->
+
+                <!--                    <li> Mame Jerry Herman Johnny Warrington</li>-->
+                <!--                    <li> Manhattan Spiritual Billy Maxted Otto Fröhlich</li>-->
+                <!--                    <li> Mas que nada Jorge Ben Mark Taylor</li>-->
+                <!--                    <li> Moonlight Serenade Glenn Miller</li>-->
+                <!--                    <li> My Man Sam Gordon Goodwin</li>-->
+
+                <!--                    <li> New York, New York John Kander Jerry Nowak</li>-->
+                <!--                    <li> Night Train Jimmy Forrest John Higgins</li>-->
+                <!--                    <li> Nobody knows the trouble I've seen Jimmy Duffy</li>-->
+
+                <!--                    <li> Oh Lady be Good George Gershwin Walter Dobschinski</li>-->
+                <!--                    <li> One Note Samba Antonio Carlos Jobim Paul Murtha</li>-->
+                <!--                    <li> Ornithology Charlie Parker Gregory Yasinitsky</li>-->
+
+                <!--                    <li> Pennsylvania 6-5000 Carl Sigman, Jerry Gray Jeff Hest</li>-->
+
+                <!--                    <li> Satin Doll Billy Strayhorn, Duke Ellington, Johnny Mercer Sammy Nestico</li>-->
+                <!--                    <li> Secret Love Sammy Fain Walter Dobschinski</li>-->
+                <!--                    <li> Sentimental Journey Bud Green, Les Brown, Ben Homer David Wolpe</li>-->
+                <!--                    <li> Singin' in the Rain Nacio Herb Brown John Denton</li>-->
+                <!--                    <li> Skyfall Adele Adkins, Paul Epworth Rodger Holmes</li>-->
+                <!--                    <li> Skyliner Charlie Barnet Pieter Wijnnobel</li>-->
+                <!--                    <li> Somethin' stupid Carson Parks</li>-->
+                <!--                    <li> Splanky Neal Hefti</li>-->
+                <!--                    <li> Stolen Moments Oliver Nelson Michael Ruppersberg</li>-->
+                <!--                    <li> Sweet Georgia Brown Ben Bernie, Maceo Pinkard, Kenneth Casey Sammy Nestico</li>-->
+                <!--                    <li> Swing low, sweet chariot Wallace Willis Sammy Nestico</li>-->
+                <!--                    <li> Switch in time Sammy Nestico Sammy Nestico</li>-->
+
+                <!--                    <li> Take the "A"-Train Billy Strayhorn Harro Steffen</li>-->
+                <!--                    <li> The Pink Panther Henry Mancini Phil Field</li>-->
+                <!--                    <li> The Preacher Horace Silver Bill Hammond</li>-->
+                <!--                    <li> Tuxedo Junction Erskine Hawkins, Bill Johnson, Julian Dash</li>-->
+
+                <!--                    <li> Up to date Thomas Reich Manfred Schneider</li>-->
+
+                <!--                    <li> Watermelon Man Herbie Hancock Jerry Nowak</li>-->
+
+
+                <!--                </ul>-->
             </div>
         </div>
     </div>
