--- a/index.html
+++ b/index.html
@@ -292,7 +292,6 @@
 </section>
 
 
-
 <!-- Auftritte Section -->
 <section id="auftritte" class="background-medium termine-section content-section text-center">
     <div class="container">
@@ -301,19 +300,40 @@
 
             <h2>Auftritte 2023</h2>
             <div class="col-md-10 mx-auto">
-                <ul class="small">
 
-
-                    <p class="blocksatz"> 10.08.2023 11:00 Ortskernfest Roßdorf
-                        <br>
-                        25.08.2023 19:00 Asklepius Klinik Alsbach
-                        <br>
-                        22.09.2023 18:45 Asklepius Klinik Alsbach
-                        <br>
-                        13.10.2023 18:45 Asklepius Klinik Alsbach</p>
+                <p class="blocksatz"> 10.08.2023 11:00 Ortskernfest Roßdorf
                     <br>
-                </ul>
+                    25.08.2023 19:00 Asklepius Klinik Alsbach
+                    <br>
+                    22.09.2023 18:45 Asklepius Klinik Alsbach
+                    <br>
+                    13.10.2023 18:45 Asklepius Klinik Alsbach</p>
+                <br>
             </div>
+
+
+            <video class="hidden_mobile" src="video/bigBandInRossdorf082023.mp4"
+                   width="640" height="480"
+                   autobuffer controls>
+
+                <div>Schade – hier käme ein Video, wenn dein
+                    Browser HTML5 Unterstützung hätte, wie z.B. der
+                    aktuelle Firefox
+                </div>
+
+            </video>
+
+            <video id="hidden_desktop" src="video/bigBandInRossdorf082023.mp4"
+                   width="320" height="240"
+                   autobuffer controls>
+
+                <div>Schade – hier käme ein Video, wenn dein
+                    Browser HTML5 Unterstützung hätte, wie z.B. der
+                    aktuelle Firefox
+                </div>
+
+            </video>
+            <p class="blocksatz">Eine kleine Impression vom Auftritt beim Ortskernfest in Roßdorf</p>
         </div>
 
     </div>
