--- a/indexBigBand.html
+++ b/indexBigBand.html
@@ -169,7 +169,8 @@
                         <img class="img-fluid rounded-circle hidden_mobile" src="img/Jon.jpg" alt="">
                     </div>
 
-                    <p class="blocksatz bold">Jon Wood</p>
+                    <p class="blocksatz bold">Jon Wood
+                        <br>(Dirigent)</p>
                     <p class="blocksatz">Text zu Jon anpassen!
                         ZB so: Anja Kempken studierte Schulmusik in Hannover,
                         im Anschluss folgte ein Klavierstudium in Darmstadt.
@@ -191,17 +192,20 @@
 
                 <div class="container_side" role="contentinfo">
                     <div class="bild_xx hidden_mobile" role="img">
-                        <img class="img-fluid rounded-circle hidden_mobile" src="img/Michael.png" alt="">
+                        <img class="img-fluid rounded-circle hidden_mobile" src="img/Michael.jpg" alt="">
                     </div>
-                    <p class="blocksatz bold">Michael Ruppersberg</p>
-                    <p class="blocksatz">Text zu Michael anpassen!
-                        ZB so: Anja Kempken studierte Schulmusik in Hannover,
-                        im Anschluss folgte ein Klavierstudium in Darmstadt.
-
-                        Durch ihre Arbeit mit verschiedenen
-                        schulischen Musikensembles entstanden bereits mehrere Arrangements
-                        für Orchester aus den Bereichen Pop- und Filmmusik. Anja Kempken ist
-                        Musiklehrerin an einem Darmstädter Gymnasium.
+                    <p class="blocksatz bold">Michael Ruppersberg
+                        <br>(stellvertretender Dirigent)
+                    </p>
+                    <p class="blocksatz">
+                        Schulmusikstudium an der Hochschule für Musik in
+                        Frankfurt am Main.
+                        Anschließend Musiklehrer an der Prälat-Diehl-Schule in Groß-Gerau.
+                        Langjährige Tätigkeit als Chorleiter mit verschiedendsten Ensembles in
+                        den Bereichen Klassik, Pop und Jazz. Hierbei entstanden auch Schallplattenaufnahmen, ein
+                        Live-Auftritt im Rundfunk und ein Video beim HR.
+                        Ist Pianist der Band und schreibt gelegentlich Arrangements für die
+                        Pfungstädter Big Band.
                     </p>
                 </div>
             </section>
@@ -263,9 +267,10 @@
                 <ul class="small">
                     <p class="bold"> Reed Section (Holzbläser)</p>
                     <li> Dr. Jon Wood Altsaxophon, Klarinette</li>
+                    <li>Matthias Neuber Altsaxophon</li>
                     <li>Katrin Rose Altsaxophon</li>
-                    <li>Peter Putz Tenorsaxophon, Baritonsaxophon</li>
                     <li>Siegfried Dittmann Tenorsaxophon, Baritonsaxophon</li>
+                    <li>Peter Putz Tenorsaxophon, Baritonsaxophon</li>
 
                     <br>
                     <p class="bold">Brass Section (Blechbläser)</p>
@@ -307,8 +312,9 @@
                     <br>
                     22.09.2023 18:45 Asklepius Klinik Alsbach
                     <br>
-                    13.10.2023 18:45 Asklepius Klinik Alsbach</p>
-                <br>
+                    13.10.2023 18:45 Asklepius Klinik Alsbach
+                    <br>
+                    09.12.2023 19:00 Adventskonzert Eschollbrücken</p>
             </div>
 
 
@@ -333,7 +339,7 @@
                 </div>
 
             </video>
-            <p class="blocksatz">Eine kleine Impression vom Auftritt beim Ortskernfest in Roßdorf</p>
+            <p class="blocksatz">Eine kleine Impression vom Auftritt beim Ortskernfest 2023 in Roßdorf</p>
         </div>
 
     </div>
@@ -347,33 +353,29 @@
             <!-- <h2>Repertoire</h2> -->
 
             <h2>Repertoire</h2>
+            <p>Hier eine kleine Auswahl aus unserem Repertoire </p>
             <div class="col-md-10 mx-auto">
                 <ul class="small noDeco">
 
-                    <li class="noDeco"><span class="bold"> Title, </span><span class="italic"> Composer, </span>arranged
-                        by
-                    </li>
+                    <!--                    <li class="noDeco"><span class="bold"> Title, </span><span class="italic"> Composer, </span>arranged-->
+                    <!--                        by-->
+                    <!--                    </li>-->
 
-                    <li><span class="bold"> A Night in Tunesia</span>, <span class="italic"> Dizzy Gillespie Frank Pararell,</span>
-                        Ralph Ford
+                    <li><span class="bold"> A Night in Tunesia</span> <span class="italic"> (Dizzy Gillespie Frank Pararell,</span>
+                        arr. Ralph Ford)
                     </li>
-                    <li><span class="bold">A String of Pearls</span>, <span class="italic"> Jerry Gray Johnny,</span>
-                        Warrington
+                    <li><span class="bold">A String of Pearls</span> <span class="italic"> (Jerry Gray Johnny,</span>
+                        arr. Warrington)
                     </li>
                     <li><span class="bold">Ain't Misbehavin</span>, <span
-                            class="italic"> Fats Waller, Harry Brooks,</span> Ralph Ford
+                            class="italic"> (Fats Waller, Harry Brooks,</span> arr. Ralph Ford)
                     </li>
-                    <li><span class="bold">Ain't she sweet?</span>, <span class="italic">Milton Ager,</span> Harro
-                        Steffen
+
+                    <li><span class="bold">All about the blues</span>, <span class="italic">(Carl Strommen</span></li>
+                    <li><span class="bold">American Patrol</span>, <span class="italic">(Frank W. Meacham, </span>
+                        arr. Paul Lavender)
                     </li>
-                    <li><span class="bold">Alexander's Ragtime Band</span>, <span class="italic">Irving Berlin,</span>
-                        David Wolpe
-                    </li>
-                    <li><span class="bold">All about the blues</span>, <span class="italic">Carl Strommen</span></li>
-                    <li><span class="bold">American Patrol</span>, <span class="italic">Frank W. Meacham, </span>Paul
-                        Lavender
-                    </li>
-                    <li><span class="bold">Arubian Island</span>, <span class="italic">Mike Carubia</span></li>
+
                 </ul>
 
                 <!--                <ul class="small">-->
