--- a/indexBigBand.html
+++ b/indexBigBand.html
@@ -178,7 +178,8 @@
                         Durch ihre Arbeit mit verschiedenen
                         schulischen Musikensembles entstanden bereits mehrere Arrangements
                         für Orchester aus den Bereichen Pop- und Filmmusik. Anja Kempken ist
-                        Musiklehrerin an einem Darmstädter Gymnasium.
+                        Musiklehrerin an einem Darmstädter Gymnasium. Der Text sollte aus aesteischen Gruenden genauso
+                        lang sein wie der andere
                     </p>
                 </div>
 
@@ -303,7 +304,7 @@
         <div class="col-md-8 termine mx-auto roundedCorners">
             <!-- <h2>Repertoire</h2> -->
 
-            <h2>Auftritte 2023</h2>
+            <h2>Auftritte Sommer/Herbst 2023</h2>
             <div class="col-md-10 mx-auto">
 
                 <p class="blocksatz"> 10.08.2023 11:00 Ortskernfest Roßdorf
@@ -353,8 +354,9 @@
             <!-- <h2>Repertoire</h2> -->
 
             <h2>Repertoire</h2>
-            <p>Hier eine kleine Auswahl aus unserem Repertoire </p>
+
             <div class="col-md-10 mx-auto">
+                <p class="blocksatz">Hier eine Auswahl aus unserem Repertoire </p>
                 <ul class="small noDeco">
 
                     <!--                    <li class="noDeco"><span class="bold"> Title, </span><span class="italic"> Composer, </span>arranged-->
@@ -367,100 +369,177 @@
                     <li><span class="bold">A String of Pearls</span> <span class="italic"> (Jerry Gray Johnny,</span>
                         arr. Warrington)
                     </li>
-                    <li><span class="bold">Ain't Misbehavin</span>, <span
+                    <li><span class="bold">Ain't Misbehavin</span> <span
                             class="italic"> (Fats Waller, Harry Brooks,</span> arr. Ralph Ford)
                     </li>
 
-                    <li><span class="bold">All about the blues</span>, <span class="italic">(Carl Strommen</span></li>
-                    <li><span class="bold">American Patrol</span>, <span class="italic">(Frank W. Meacham, </span>
-                        arr. Paul Lavender)
+                    <li><span class="bold">All about the blues</span>, <span class="italic">(Carl Strommen)</span></li>
+                    <li><span class="bold">American Patrol</span>
+                        <span class="italic">(Frank W. Meacham,
+                        </span>arr. Paul Lavender)
                     </li>
 
-                </ul>
-
-                <!--                <ul class="small">-->
-
-
-                <!--                    <li> A Night in Tunesia, Dizzy Gillespie, Frank Pararell Ralph Ford</li>-->
-                <!--                    <li> A String of Pearls, Jerry Gray Johnny, Warrington</li>-->
-                <!--                    <li> Ain't Misbehavin Fats Waller, Harry Brooks Ralph Ford</li>-->
-                <!--                    <li> Ain't she sweet? Milton Ager Harro Steffen</li>-->
-                <!--                    <li> Alexander's Ragtime Band Irving Berlin David Wolpe</li>-->
-                <!--                    <li> All about the blues Carl Strommen</li>-->
-                <!--                    <li> American Patrol Frank W. Meacham Paul Lavender</li>-->
-                <!--                    <li> Arubian Island Mike Carubia</li>-->
-
-                <!--                    <li> Begin the beguine Cole Porter Jerry Gray</li>-->
-                <!--                    <li> Big Spender Cy Coleman Rick Stitzel</li>-->
-                <!--                    <li> Birdland Joe Zawinul Victor Lopez</li>-->
-
-                <!--                    <li> C Jam Blues Duke Ellington</li>-->
-                <!--                    <li> Creole Love Call Duke Ellington Walter Doschinski</li>-->
-                <!--                    <li> Chattanooga Choo Choo Harry Warren, Mack Gordon Helmut Gardens</li>-->
-                <!--                    <li> Cute Neal Hefti Mike Story</li>-->
-                <!--                    <li> Dancing in the dark</li>-->
-                <!--                    <li> Don't get around much anymore Duke Ellington Bob Russell</li>-->
-                <!--                    <li> Dream Johnny Mercer Frank Comstock</li>-->
-
-                <!--                    <li> Fat Man Boogie Billy May, Peter Herbolzheimer</li>-->
-                <!--                    <li> Fever John Davenport Rodger Holmes</li>-->
-
-                <!--                    <li> Get me to the church in time Frederick Lowe Ralph Ford</li>-->
-                <!--                    <li> Groovin' High Dizzy Gillespie Gregory Yasinitsky</li>-->
-
-                <!--                    <li> Hay Burner Sammy Nestico Sammy Nestico</li>-->
-                <!--                    <li> Harlem Nocturne Earl Hagen Siegfried Ulbrich</li>-->
-
-                <!--                    <li> In the Mood Joe Garland Paul Lavender</li>-->
-
-                <!--                    <li> James Bond Theme Monty Norman Tom Davis</li>-->
-                <!--                    <li> Jumpin at the Woodside Count Basie Sammy Nestico</li>-->
-
-                <!--                    <li> Kitty Willy Berking Paul Biste</li>-->
-
-                <!--                    <li> Little Brown Jug Joseph Winner Paul Lavender</li>-->
-                <!--                    <li> Liza George Gershwin Walter Dobschinski</li>-->
-
-                <!--                    <li> Mame Jerry Herman Johnny Warrington</li>-->
-                <!--                    <li> Manhattan Spiritual Billy Maxted Otto Fröhlich</li>-->
-                <!--                    <li> Mas que nada Jorge Ben Mark Taylor</li>-->
-                <!--                    <li> Moonlight Serenade Glenn Miller</li>-->
-                <!--                    <li> My Man Sam Gordon Goodwin</li>-->
-
-                <!--                    <li> New York, New York John Kander Jerry Nowak</li>-->
-                <!--                    <li> Night Train Jimmy Forrest John Higgins</li>-->
-                <!--                    <li> Nobody knows the trouble I've seen Jimmy Duffy</li>-->
-
-                <!--                    <li> Oh Lady be Good George Gershwin Walter Dobschinski</li>-->
-                <!--                    <li> One Note Samba Antonio Carlos Jobim Paul Murtha</li>-->
-                <!--                    <li> Ornithology Charlie Parker Gregory Yasinitsky</li>-->
-
-                <!--                    <li> Pennsylvania 6-5000 Carl Sigman, Jerry Gray Jeff Hest</li>-->
-
-                <!--                    <li> Satin Doll Billy Strayhorn, Duke Ellington, Johnny Mercer Sammy Nestico</li>-->
-                <!--                    <li> Secret Love Sammy Fain Walter Dobschinski</li>-->
-                <!--                    <li> Sentimental Journey Bud Green, Les Brown, Ben Homer David Wolpe</li>-->
-                <!--                    <li> Singin' in the Rain Nacio Herb Brown John Denton</li>-->
-                <!--                    <li> Skyfall Adele Adkins, Paul Epworth Rodger Holmes</li>-->
-                <!--                    <li> Skyliner Charlie Barnet Pieter Wijnnobel</li>-->
-                <!--                    <li> Somethin' stupid Carson Parks</li>-->
-                <!--                    <li> Splanky Neal Hefti</li>-->
-                <!--                    <li> Stolen Moments Oliver Nelson Michael Ruppersberg</li>-->
-                <!--                    <li> Sweet Georgia Brown Ben Bernie, Maceo Pinkard, Kenneth Casey Sammy Nestico</li>-->
-                <!--                    <li> Swing low, sweet chariot Wallace Willis Sammy Nestico</li>-->
-                <!--                    <li> Switch in time Sammy Nestico Sammy Nestico</li>-->
-
-                <!--                    <li> Take the "A"-Train Billy Strayhorn Harro Steffen</li>-->
-                <!--                    <li> The Pink Panther Henry Mancini Phil Field</li>-->
-                <!--                    <li> The Preacher Horace Silver Bill Hammond</li>-->
-                <!--                    <li> Tuxedo Junction Erskine Hawkins, Bill Johnson, Julian Dash</li>-->
-
-                <!--                    <li> Up to date Thomas Reich Manfred Schneider</li>-->
-
-                <!--                    <li> Watermelon Man Herbie Hancock Jerry Nowak</li>-->
+                    <li><span class="bold"> Birdland</span>
+                        <span class="italic">(Joe Zawinul,
+                        </span>arr. Victor Lopez)
+                    </li>
 
 
-                <!--                </ul>-->
+                    <li><span class="bold">Don't get around much anymore </span>
+                        <span class="italic">(Duke Ellington,
+                        </span>arr. Bob Russell)
+                    </li>
+
+
+                    <li><span class="bold"> Groovin' High</span>
+                        <span class="italic">(Dizzy Gillespie,
+                        </span>arr. Gregory Yasinitsky)
+                    </li>
+
+                    <li><span class="bold"> Hay Burner</span>
+                        <span class="italic">(Sammy Nestico,
+                        </span>arr. Sammy Nestico)
+                    </li>
+
+                    <li><span class="bold"> In the Mood</span>
+                        <span class="italic">(Joe Garland,
+                        </span>arr. Paul Lavender)
+                    </li>
+
+                    <li><span class="bold"> Little Brown Jug</span>
+                        <span class="italic">(Joseph Winner,
+                        </span>arr. Paul Lavender)
+                    </li>
+
+                    <li><span class="bold"> Mas que nada</span>
+                        <span class="italic">(Jorge Ben,
+                        </span>arr. Mark Taylor)
+                    </li>
+
+                    <li><span class="bold">  My Man Sam </span>
+                        <span class="italic">(Gordon Goodwin,
+                        </span>arr. Gordon Goodwin)
+                    </li>
+
+                    <li><span class="bold"> New York, New York</span>
+                        <span class="italic">(John Kander,
+                        </span>arr. Jerry Nowak)
+                    </li>
+
+                    <li><span class="bold">One Note Samba </span>
+                        <span class="italic">(Antonio Carlos,
+                        </span>arr. Jobim Paul Murtha)
+                    </li>
+
+                    <li><span class="bold"> Satin Doll</span>
+                        <span class="italic">(Billy Strayhorn, Duke Ellington, Johnny Mercer,
+                        </span>arr. Sammy Nestico)
+                    </li>
+
+                    <li><span class="bold"> Sweet Georgia Brown</span>
+                        <span class="italic">(Ben Bernie, Maceo Pinkard, Kenneth Casey,
+                        </span>arr. Sammy Nestico)
+                    </li>
+
+                    <li><span class="bold"> Singin' in the Rain</span>
+                        <span class="italic">(Nacio Herb Brown,
+                        </span>arr. John Denton)
+                    </li>
+
+                    <li><span class="bold"> Skyliner</span>
+                        <span class="italic">(Charlie Barnet,
+                        </span>arr. Pieter Wijnnobel)
+                    </li>
+
+                    <li><span class="bold"> The Pink Panther</span>
+                        <span class="italic">(Henry Mancini,
+                        </span>arr. Phil Field)
+                    </li>
+
+
+                    <!--                <ul class="small">-->
+
+
+                    <!--                    <li> A Night in Tunesia, Dizzy Gillespie, Frank Pararell Ralph Ford</li>-->
+                    <!--                    <li> A String of Pearls, Jerry Gray Johnny, Warrington</li>-->
+                    <!--                    <li> Ain't Misbehavin Fats Waller, Harry Brooks Ralph Ford</li>-->
+                    <!--                    <li> Ain't she sweet? Milton Ager Harro Steffen</li>-->
+                    <!--                    <li> Alexander's Ragtime Band Irving Berlin David Wolpe</li>-->
+                    <!--                    <li> All about the blues Carl Strommen</li>-->
+                    <!--                    <li> American Patrol Frank W. Meacham Paul Lavender</li>-->
+                    <!--                    <li> Arubian Island Mike Carubia</li>-->
+
+                    <!--                    <li> Begin the beguine Cole Porter Jerry Gray</li>-->
+                    <!--                    <li> Big Spender Cy Coleman Rick Stitzel</li>-->
+                    <!--                    <li> Birdland Joe Zawinul Victor Lopez</li>-->
+
+                    <!--                    <li> C Jam Blues Duke Ellington</li>-->
+                    <!--                    <li> Creole Love Call Duke Ellington Walter Doschinski</li>-->
+                    <!--                    <li> Chattanooga Choo Choo Harry Warren, Mack Gordon Helmut Gardens</li>-->
+                    <!--                    <li> Cute Neal Hefti Mike Story</li>-->
+                    <!--                    <li> Dancing in the dark</li>-->
+                    <!--                    <li> Don't get around much anymore Duke Ellington Bob Russell</li>-->
+                    <!--                    <li> Dream Johnny Mercer Frank Comstock</li>-->
+
+                    <!--                    <li> Fat Man Boogie Billy May, Peter Herbolzheimer</li>-->
+                    <!--                    <li> Fever John Davenport Rodger Holmes</li>-->
+
+                    <!--                    <li> Get me to the church in time Frederick Lowe Ralph Ford</li>-->
+                    <!--                    <li> Groovin' High Dizzy Gillespie Gregory Yasinitsky</li>-->
+
+                    <!--                    <li> Hay Burner Sammy Nestico Sammy Nestico</li>-->
+                    <!--                    <li> Harlem Nocturne Earl Hagen Siegfried Ulbrich</li>-->
+
+                    <!--                    <li> In the Mood Joe Garland Paul Lavender</li>-->
+
+                    <!--                    <li> James Bond Theme Monty Norman Tom Davis</li>-->
+                    <!--                    <li> Jumpin at the Woodside Count Basie Sammy Nestico</li>-->
+
+                    <!--                    <li> Kitty Willy Berking Paul Biste</li>-->
+
+                    <!--                    <li> Little Brown Jug Joseph Winner Paul Lavender</li>-->
+                    <!--                    <li> Liza George Gershwin Walter Dobschinski</li>-->
+
+                    <!--                    <li> Mame Jerry Herman Johnny Warrington</li>-->
+                    <!--                    <li> Manhattan Spiritual Billy Maxted Otto Fröhlich</li>-->
+                    <!--                    <li> Mas que nada Jorge Ben Mark Taylor</li>-->
+                    <!--                    <li> Moonlight Serenade Glenn Miller</li>-->
+                    <!--                    <li> My Man Sam Gordon Goodwin</li>-->
+
+                    <!--                    <li> New York, New York John Kander Jerry Nowak</li>-->
+                    <!--                    <li> Night Train Jimmy Forrest John Higgins</li>-->
+                    <!--                    <li> Nobody knows the trouble I've seen Jimmy Duffy</li>-->
+
+                    <!--                    <li> Oh Lady be Good George Gershwin Walter Dobschinski</li>-->
+                    <!--                    <li> One Note Samba Antonio Carlos Jobim Paul Murtha</li>-->
+                    <!--                    <li> Ornithology Charlie Parker Gregory Yasinitsky</li>-->
+
+                    <!--                    <li> Pennsylvania 6-5000 Carl Sigman, Jerry Gray Jeff Hest</li>-->
+
+                    <!--                    <li> Satin Doll Billy Strayhorn, Duke Ellington, Johnny Mercer Sammy Nestico</li>-->
+                    <!--                    <li> Secret Love Sammy Fain Walter Dobschinski</li>-->
+                    <!--                    <li> Sentimental Journey Bud Green, Les Brown, Ben Homer David Wolpe</li>-->
+                    <!--                    <li> Singin' in the Rain Nacio Herb Brown John Denton</li>-->
+                    <!--                    <li> Skyfall Adele Adkins, Paul Epworth Rodger Holmes</li>-->
+                    <!--                    <li> Skyliner Charlie Barnet Pieter Wijnnobel</li>-->
+                    <!--                    <li> Somethin' stupid Carson Parks</li>-->
+                    <!--                    <li> Splanky Neal Hefti</li>-->
+                    <!--                    <li> Stolen Moments Oliver Nelson Michael Ruppersberg</li>-->
+                    <!--                    <li> Sweet Georgia Brown Ben Bernie, Maceo Pinkard, Kenneth Casey Sammy Nestico</li>-->
+                    <!--                    <li> Swing low, sweet chariot Wallace Willis Sammy Nestico</li>-->
+                    <!--                    <li> Switch in time Sammy Nestico Sammy Nestico</li>-->
+
+                    <!--                    <li> Take the "A"-Train Billy Strayhorn Harro Steffen</li>-->
+                    <!--                    <li> The Pink Panther Henry Mancini Phil Field</li>-->
+                    <!--                    <li> The Preacher Horace Silver Bill Hammond</li>-->
+                    <!--                    <li> Tuxedo Junction Erskine Hawkins, Bill Johnson, Julian Dash</li>-->
+
+                    <!--                    <li> Up to date Thomas Reich Manfred Schneider</li>-->
+
+                    <!--                    <li> Watermelon Man Herbie Hancock Jerry Nowak</li>-->
+
+
+                    <!--                </ul>-->
             </div>
         </div>
     </div>
