--- a/indexBigBand.html
+++ b/indexBigBand.html
@@ -126,7 +126,8 @@
                 <!-- new flex item line -->
                 <!-- flex item 1 -->
                 <div class="container_media_side" role="img">
-                    <img class="img-fluid rounded-circle hidden_mobile" src="img/AltSax.jpg" alt="">
+                    <img class="img-fluid rounded-circle hidden_mobile" src="img/TenorSax.png" alt="">
+<!--                    <img class="img-fluid rounded-circle hidden_mobile" src="img/AltSax.jpg" alt="">-->
                 </div>
                 <!-- flex item 2 -->
                 <div class="container_side special_padding_bottom" role="content">
