MV Hauptseite verbessert (noch nicht fertig)

--- a/index.html
+++ b/index.html
@@ -14,12 +14,26 @@
 <!--- HEADER  -->
 <header role="heading">
     <div class="container_project">
-    <h1 class="spezialFont" role="heading"> Musikverein Pfungstadt </h1>
+        <h1 class="spezialFont" role="heading"> Musikverein Pfungstadt </h1>
     </div>
 </header>
 
 <main>
+    <section id="contact">
+        <div class="container_contact">
+            <div class="contact_info">
+                <div>
+                    <h2 role="heading"> Willkommen auf der Homepage des Musikvereins Pfungstadt e.V. 1926</h2>
+                    <div class="">
+                        <p> Wir sind ein Musikverein, in welchem sich Musiker:innen treffen und gemeinsam in einem
+                            oder mehrerer unserer Ensembles spielen. Details zu den verschiedenen Ensembles findet ihr
+                            unten.</p>
+                    </div>
 
+                </div>
+            </div>
+        </div>
+    </section>
 
     <!-- PROJECTS -->
     <section id="projects">
@@ -29,89 +43,99 @@
             <div class="subcontainer_project">
 
                 <div class="container_project_box">
-                    <a href="indexBigBand.html">
-                        <div class="container_image" id="hidden_mobile" role="presentation">
-                            <img src="img/Bigband-2022.jpg" alt="" role="img">
-                        </div>
+
+                    <div class="container_image" id="hidden_mobile" role="presentation">
+                        <img src="img/LogoBigBand.jpg" alt="" role="img">
+
                         <div class="project_info">
                             <h2> Big Band</h2>
                             <p> Probe: Donnerstags, 18:30-21:00</p>
                             <p> Leiter: Jon Wood</p>
-                            <p class="go_button"> Zur Big Band </p>
+                            <a href="indexBigBand.html">
+                                <p class="go_button"> Zur Big Band </p>
+                            </a>
                         </div>
-                    </a>
-                </div>
-
-                <div class="container_project_box">
-                    <!--                    <a href="indexBigBand.html">-->
-                    <div class="container_image" id="hidden_mobile" role="presentation">
-                        <img src="img/Logo.jpg" alt="" role="img">
                     </div>
-                    <div class="project_info">
-                        <h2> Streicher</h2>
-                        <p> Probe: Donnerstags, 18:30-21:00</p>
-                        <p> Leiter: </p>
-                        <p class="go_button"> Zu den Streichern </p>
-                    </div>
-<!--                    </a>-->
-                </div>
-
-                <div class="container_project_box">
-                    <!--                    <a href="indexBigBand.html">-->
-                    <div class="container_image" id="hidden_mobile" role="presentation">
-                        <img src="img/Logo.jpg" alt="" role="img">
-                    </div>
-                    <div class="project_info">
-                        <h2> Fusion Band</h2>
-                        <p> Probe Mittwochs, 18:30-21:00</p>
-                        <p> Leiter: </p>
-                        <p class="go_button"> Zur Fusion Band </p>
-                    </div>
-<!--                    </a>-->
                 </div>
 
 
                 <div class="container_project_box">
-                    <!--                    <a href="indexBigBand.html">-->
+
                     <div class="container_image" id="hidden_mobile" role="presentation">
-                        <img src="img/Logo.jpg" alt="" role="img">
+                        <img src="img/tmp.png" alt="" role="img">
+
+                        <div class="project_info">
+                            <h2> Blechbläser</h2>
+                            <p> Probe: ?</p>
+                            <p> Leiter: Peter Leisemann</p>
+
+                            <p class="go_button"> aktuell kein link </p>
+                        </div>
                     </div>
-                    <div class="project_info">
-                        <h2> Fusion Band</h2>
-                        <p> Probe Mittwochs, 18:30-21:00</p>
-                        <p> Leiter: ?</p>
-                        <p class="go_button"> Zur Fusion Band </p>
-                    </div>
-<!--                    </a>-->
                 </div>
 
                 <div class="container_project_box">
-                    <!--                    <a href="indexBigBand.html">-->
+
                     <div class="container_image" id="hidden_mobile" role="presentation">
-                        <img src="img/Logo.jpg" alt="" role="img">
+                        <img src="img/tmp.png" alt="" role="img">
+
+                        <div class="project_info">
+                            <h2> Fusion Band</h2>
+                            <p> Probe: Mittwochs, 18:30-21:00</p>
+                            <p> Leiter: ?</p>
+
+                            <p class="go_button"> aktuell kein link </p>
+                        </div>
                     </div>
-                    <div class="project_info">
-                        <h2> Swing Band</h2>
-                        <p> Probe ?</p>
-                        <p> Leiter: ?</p>
-                        <p class="go_button"> Zur Swing Band </p>
+                </div>
+
+
+                <div class="container_project_box">
+
+                    <div class="container_image" id="hidden_mobile" role="presentation">
+                        <img src="img/tmp.png" alt="" role="img">
+
+                        <div class="project_info">
+                            <h2> Sax Plus</h2>
+                            <p> Probe: aktuell keine Probe</p>
+                            <p> Leiter: ?</p>
+
+                            <p class="go_button"> aktuell kein link</p>
+                        </div>
                     </div>
-<!--                    </a>-->
                 </div>
 
                 <div class="container_project_box">
-                    <!--                    <a href="indexBigBand.html">-->
+
                     <div class="container_image" id="hidden_mobile" role="presentation">
-                        <img src="img/Logo.jpg" alt="" role="img">
+                        <img src="img/tmp.png" alt="" role="img">
+
+                        <div class="project_info">
+                            <h2> Streicher</h2>
+                            <p> Probe: Donnerstags, 18:30-21:00</p>
+                            <p> Leiter: </p>
+
+                            <p class="go_button"> aktuell kein link</p>
+                        </div>
                     </div>
-                    <div class="project_info">
-                        <h2> Blechbläser</h2>
-                        <p> Probe ?</p>
-                        <p> Leiter: Peter Leisemann</p>
-                        <p class="go_button"> Zu den Blech Bläsern </p>
-                    </div>
-<!--                    </a>-->
                 </div>
+
+
+                <div class="container_project_box">
+
+                    <div class="container_image" id="hidden_mobile" role="presentation">
+                        <img src="img/tmp.png" alt="" role="img">
+
+                        <div class="project_info">
+                            <h2> Swing Band</h2>
+                            <p> Probe: ?</p>
+                            <p> Leiter: </p>
+
+                            <p class="go_button"> aktuell kein link</p>
+                        </div>
+                    </div>
+                </div>
+
 
             </div>
         </div>
