--- a/indexBigBand.html
+++ b/indexBigBand.html
@@ -111,7 +111,7 @@
                 </div>
                 <!-- flex item 2 -->
                 <div class="container_media_side" role="img">
-                    <img class="img-fluid rounded-circle hidden_mobile" src="img/Logo.jpg" alt="">
+                    <img class="img-fluid rounded-circle hidden_mobile" src="img/LogoBigBand.jpg" alt="">
                 </div>
             </section>
 
@@ -119,7 +119,7 @@
             <section class="info-section-background">
 
                 <div id="hidden_desktop" role="img">
-                    <img class="img-fluid rounded-circle " id="hidden_desktop" src="img/Logo.jpg" alt="">
+                    <img class="img-fluid rounded-circle " id="hidden_desktop" src="img/LogoBigBand.jpg" alt="">
                 </div>
 
 
