--- a/indexBigBand.html
+++ b/indexBigBand.html
@@ -65,6 +65,9 @@
                 <li class="nav-item">
                     <a class="nav-link js-scroll-trigger" href="#contact">Kontakt</a>
                 </li>
+                <li class="nav-item">
+                    <a class="nav-link js-scroll-trigger" href="indexBigBandIntern.html">Intern</a>
+                </li>
             </ul>
         </div>
     </div>
