--- a/indexBigBand.html
+++ b/indexBigBand.html
@@ -175,15 +175,17 @@
 
                     <p class="blocksatz bold">Jon Wood
                         <br>(Dirigent)</p>
-                    <p class="blocksatz">Text zu Jon anpassen!
-                        ZB so: Anja Kempken studierte Schulmusik in Hannover,
-                        im Anschluss folgte ein Klavierstudium in Darmstadt.
-
-                        Durch ihre Arbeit mit verschiedenen
-                        schulischen Musikensembles entstanden bereits mehrere Arrangements
-                        für Orchester aus den Bereichen Pop- und Filmmusik. Anja Kempken ist
-                        Musiklehrerin an einem Darmstädter Gymnasium. Der Text sollte aus aesteischen Gruenden genauso
-                        lang sein wie der andere
+                    <p class="blocksatz">
+                        Chemiestudium am Imperial College in London,
+                        das er mit einer Promotion abschloss.
+                        Am College of Arts in Totnes erhielt er eine Ausbildung
+                        auf der Klarinette und spielt darüberhinaus auch
+                        Altsaxophon.
+                        Nach seinem Mitwirken in der "Little Big Band" des
+                        Imperial College sammelte er Erfahrungen in diversen Orchestern.
+                        1998 beginnt er seine Tätigkeit im Musikverein Pfungstadt, wo er
+                        2005 die Leitung der Big Band und später auch die des Saxophonquartetts
+                        übernahm.
                     </p>
                 </div>
 
@@ -209,8 +211,7 @@
                         Langjährige Tätigkeit als Chorleiter mit verschiedendsten Ensembles in
                         den Bereichen Klassik, Pop und Jazz. Hierbei entstanden auch Schallplattenaufnahmen, ein
                         Live-Auftritt im Rundfunk und ein Video beim HR.
-                        Ist Pianist der Band und schreibt gelegentlich Arrangements für die
-                        Pfungstädter Big Band.
+                        Ist Pianist der Big Band und schreibt gelegentlich Arrangements für die Band.
                     </p>
                 </div>
             </section>
